--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload='changeLang("");'>
+	<div id="contentWrap">
 	<div id="header">
 		<div id="logo">
 			<img id="logo" src="./logo1.jpg" alt="logo"></img>
@@ -43,8 +44,10 @@
 		<h1 lang="hu">Rólunk</h1>
 		<p lang="hu">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at lacinia odio, at dignissim purus. Suspendisse tristique dui sodales laoreet ultricies. Morbi luctus eleifend arcu. Nam semper justo non leo porttitor, quis pellentesque lacus condimentum. Ut quis elit eget diam viverra ultricies nec at ex. Fusce non eros tristique, scelerisque enim at, vehicula lorem. Suspendisse eu nunc tincidunt, ultrices orci in, luctus diam. Nulla pellentesque, sapien a sagittis egestas, mi enim vehicula dolor, a egestas arcu elit sed libero. Curabitur hendrerit bibendum eleifend. Suspendisse in dictum orci, id sollicitudin orci. Nam vulputate sem eu mi porta, vel pretium enim luctus.</p>
 	</div>
+	</div>  <!-- end of contentWrap -->
+	
 	<div id="footer">
-		&copy; 2022
+		&copy; <span id="year"></span>
 	</div>
 </body>
 
