--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload='changeLang("");'>
+	<div id="contentWrap">
 	<div id="header">
 		<div id="logo">
 			<img id="logo" src="./logo1.jpg" alt="logo"></img>
@@ -57,8 +58,10 @@
 			<a href="mailto:czmmrsndr@gmail.com">czmmrsndr@gmail.com</a>
 		</address>
 	</div>
+	</div>  <!-- end of contentWrap -->
+	
 	<div id="footer">
-		&copy; 2022
+		&copy; <span id="year"></span>
 	</div>
 </body>
 
