--- a/minesweeper.html
+++ b/minesweeper.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload='changeLang("");'>
+	<div id="contentWrap">
 	<div id="header">
 		<div id="logo">
 			<img id="logo" src="./logo1.jpg" alt="logo"></img>
@@ -95,8 +96,10 @@
 		<h2>Letöltés</h2>
 		<p><a href="./downloads/minesweeper.py">Minesweeper.py</a></p>
 	</div>
+	</div>  <!-- end of contentWrap -->
+	
 	<div id="footer">
-		&copy; 2022
+		&copy; <span id="year"></span>
 	</div>
 </body>
 
