--- a/projecteuler.html
+++ b/projecteuler.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload='changeLang("");'>
+	<div id="contentWrap">
 	<div id="header">
 		<div id="logo">
 			<img id="logo" src="./logo1.jpg" alt="logo"></img>
@@ -83,8 +84,10 @@
 		<h2>Letöltés</h2>
 		<p><a href="https://projecteuler.net/about" target=”_blank”>Project Euler</a></p>
 	</div>
+	</div>  <!-- end of contentWrap -->
+	
 	<div id="footer">
-		&copy; 2022
+		&copy; <span id="year"></span>
 	</div>
 </body>
 
