--- a/scheduleplanner.html
+++ b/scheduleplanner.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload='changeLang("");'>
+	<div id="contentWrap">
 	<div id="header">
 		<div id="logo">
 			<img id="logo" src="./logo1.jpg" alt="logo"></img>
@@ -115,8 +116,10 @@
 		<h2>Letöltés</h2>
 		<p><a href="./scheduleplanner.zip">Beosztástervező</a></p>
 	</div>
+	</div>
+	
 	<div id="footer">
-		&copy; 2022
+		&copy; <span id="year"></span>
 	</div>
 </body>
 
