--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
 </head>
 
 <body onload='changeLang("");'>
-	<button class="changeLang" onclick='changeLang("en");'>EN</button>
-	<button class="changeLang" onclick='changeLang("hu");'>HU</button>
+	<div id="contentWrap">
+		<button class="changeLang" onclick='changeLang("en");'>EN</button>
+		<button class="changeLang" onclick='changeLang("hu");'>HU</button>
 
-	<!-- english -->
-	<a lang="en" class="menu" href="./projects.html">Projects</a>
-	<a lang="en" class="menu" href="./about.html">About</a>
-	<a lang="en" class="menu" href="./contact.html">Contact</a>
-	<!-- magyar -->
-	<a lang="hu" class="menu" href="./projects.html">Projektek</a>
-	<a lang="hu" class="menu" href="./about.html">Rólunk</a>
-	<a lang="hu" class="menu" href="./contact.html">Kapcsolat</a>
+		<!-- english -->
+		<a lang="en" class="menu" href="./projects.html">Projects</a>
+		<a lang="en" class="menu" href="./about.html">About</a>
+		<a lang="en" class="menu" href="./contact.html">Contact</a>
+		<!-- magyar -->
+		<a lang="hu" class="menu" href="./projects.html">Projektek</a>
+		<a lang="hu" class="menu" href="./about.html">Rólunk</a>
+		<a lang="hu" class="menu" href="./contact.html">Kapcsolat</a>
+		
+		<!-- <a href=""><img alt="about" src="./about.jpg" width="150" height="70"></a> -->
+	</div>  <!-- end of contentWrap -->
 	
-	<!-- <a href=""><img alt="about" src="./about.jpg" width="150" height="70"></a> -->
+	<div id="footer">
+		&copy; <span id="year"></span>
+	</div>
 </body>
 
 </html>
