--- a/scheduleplanner.html
+++ b/scheduleplanner.html
@@ -116,7 +116,7 @@
 		<h2>Letöltés</h2>
 		<p><a href="./scheduleplanner.zip">Beosztástervező</a></p>
 	</div>
-	</div>
+	</div>  <!-- end of contentWrap -->
 	
 	<div id="footer">
 		&copy; <span id="year"></span>
