--- a/list1.html
+++ b/list1.html
@@ -25,4 +25,6 @@ foreach (listEn as elementEn) {
   a.setAttributeNode(att);
   //set value
   a.innerHTML = elementEn[0];
+  //set link element as child of div
+  div.appendChild(a);
 }
