--- a/list1.html
+++ b/list1.html
@@ -1,4 +1,11 @@
-div = document.createElement('div'); //create div element
+<!DOCTYPE html>
+
+<head>
+</head>
+
+<body>
+
+const div = document.createElement('div'); //create div element
 const att = document.createAttribute("id"); //create id attribute
 att.value = "menu2"; //set the value of the attribute:
 div.setAttributeNode(att); //add the id attribute to the div
@@ -28,3 +35,5 @@ foreach (listEn as elementEn) {
   //set link element as child of div
   div.appendChild(a);
 }
+  
+</body>
