--- a/list1.html
+++ b/list1.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-</head>
-
-<body>
+<script>
 
 const div = document.createElement('div'); //create div element
 const att = document.createAttribute("id"); //create id attribute
@@ -36,4 +34,9 @@ foreach (listEn as elementEn) {
   div.appendChild(a);
 }
   
+</script>
+</head>
+
+<body>
+  <h1>List with js</h1>
 </body>
