index mainMenu change

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<button class="changeLang" onclick='changeLang("en");'>EN</button>
 		<button class="changeLang" onclick='changeLang("hu");'>HU</button>
 
+		<div id="mainMenu">
 		<!-- english -->
 		<a lang="en" class="menu" href="./projects.html">Projects</a>
 		<a lang="en" class="menu" href="./about.html">About</a>
@@ -24,6 +25,7 @@
 		<a lang="hu" class="menu" href="./projects.html">Projektek</a>
 		<a lang="hu" class="menu" href="./about.html">Rólunk</a>
 		<a lang="hu" class="menu" href="./contact.html">Kapcsolat</a>
+		</div>
 		
 		<!-- <a href=""><img alt="about" src="./about.jpg" width="150" height="70"></a> -->
 	</div>  <!-- end of contentWrap -->
