--- a/nav2_index.html
+++ b/nav2_index.html
@@ -30,7 +30,7 @@
 		<!-- <a href=""><img alt="about" src="./about.jpg" width="150" height="70"></a> -->
 	</div>  <!-- end of contentWrap -->
 	
-	<script id="hereNav2" src="nav2.js"></script>
+	<script id="menu2" src="nav2.js"></script>
 	
 	<div id="footer">
 		&copy; <span id="year"></span>
