--- a/nav2_index.html
+++ b/nav2_index.html
@@ -31,6 +31,7 @@
 	</div>  <!-- end of contentWrap -->
 	
 	<script id="menu2" src="nav2.js"></script>
+	<script>changeLang("");</script>
 	
 	<div id="footer">
 		&copy; <span id="year"></span>
