--- a/nav2_index.html
+++ b/nav2_index.html
@@ -35,6 +35,8 @@
 	<div id="footer">
 		&copy; <span id="year"></span>
 	</div>
+	
+	<script>changeLang("");</script> <!-- because of id="year" -->
 </body>
 
 </html>
