--- a/nav2_index.html
+++ b/nav2_index.html
@@ -30,7 +30,19 @@
 		<!-- <a href=""><img alt="about" src="./about.jpg" width="150" height="70"></a> -->
 	</div>  <!-- end of contentWrap -->
 	
-	<script id="menu2" src="nav2.js"></script>
+	<!-- <script id="menu2" src="nav2.js"></script> -->
+	<div id="menu2"></div>
+	<script>
+		<!-- var element = document.getElementById("menu2"); -->
+		<!-- element.insertAdjacentHTML("afterbegin", '<a class="menu2" href="./minesweeper.html" lang="en">Minesweeper</a>'); -->
+		
+		fetch("nav2.html")
+		.then(result => result.text())
+		.then(text => {
+			var element = document.getElementById("menu2");
+			element.insertAdjacentHTML("afterbegin", text);
+		})
+	</script>
 	
 	<div id="footer">
 		&copy; <span id="year"></span>
