--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,9 @@
 				var element = document.getElementById("menu1");
 				element.insertAdjacentHTML("afterbegin", text);
 			})
+			console.log("menu1 fetched");
+			var menu1 = document.getElementById("menu2");
+			console.log(menu1);
 		</script>
 		</div>
 		
@@ -44,6 +47,9 @@
 				var element = document.getElementById("menu2");
 				element.insertAdjacentHTML("afterbegin", text);
 			})
+			console.log("menu2 fetched");
+			var menu2 = document.getElementById("menu2");
+			console.log(menu2);
 		</script>
 		
 		<div id="content_en" lang="en">
