--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 		
-		<div id="menu1">
+		<div id="menu1"></div>
 		<script>
 			fetch("menu1.html")
 			.then(result => result.text())
@@ -37,7 +37,6 @@
 			var menu1 = document.getElementById("menu1");
 			console.log(menu1);
 		</script>
-		</div>
 		
 		<div id="menu2"></div>
 		<script>
