--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,15 @@
 <title>Projects</title>
 <link rel="stylesheet" href="./style.css"> <!-- external css -->
 <script language="JavaScript" type="text/javascript" src="./scripts.js"></script> <!--external javascript -->
+<script>
+document.observe("dom:loaded", function() {
+	changeLang("");
+});
+</script>
 </head>
 
-<body onload='changeLang("");'>
+<!-- <body onload='changeLang("");'> -->
+<body>
 	<div id="contentWrap">
 		<div id="header">
 			<div id="logo">
