--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 		
 		<div id="menu2"></div>
 		<script>
-			await fetch("menu2.html")
+			fetch("menu2.html")
 			.then(result => result.text())
 			.then(text => {
 				var element = document.getElementById("menu2");
