--- a/projects2.html
+++ b/projects2.html
@@ -25,38 +25,27 @@
 			</div>
 		</div>
 		
-		<div id="menu1">
-			<!-- english -->
-			<a class="menu1" href="./index.html" lang="en">Home</a>
-			<a class="menu1" href="./projects.html" lang="en">Projects</a>
-			<a class="menu1" href="./about.html" lang="en">About</a>
-			<a class="menu1" href="./contact.html" lang="en">Contact</a>
-			<!-- magyar -->
-			<a class="menu1" href="./index.html" lang="hu">Főoldal</a>
-			<a class="menu1" href="./projects.html" lang="hu">Projektek</a>
-			<a class="menu1" href="./about.html" lang="hu">Rólunk</a>
-			<a class="menu1" href="./contact.html" lang="hu">Kapcsolat</a>
-		</div>
-		<div id="menu2">
-			<!-- english -->
-			<a class="menu2" href="./minesweeper.html" lang="en">Minesweeper</a>
-			<a class="menu2" href="./scheduleplanner.html" lang="en">Schedule Planner</a>
-			<a class="menu2" href="./plantmonitor.html" lang="en">Plant Monitor</a>
-			<a class="menu2" href="./carkit.html" lang="en">Car Kit</a>
-			<a class="menu2" href="./gta2d.html" lang="en">GTA 2D</a>
-			<a class="menu2" href="./gta3d.html" lang="en">GTA 3D</a>
-			<a class="menu2" href="./projecteuler.html" lang="en">Project Euler</a>
-			<a class="menu2" href="./thispage.html" lang="en">This page</a>
-			<!-- magyar -->
-			<a class="menu2" href="./minesweeper.html" lang="hu">Aknakereső</a>
-			<a class="menu2" href="./scheduleplanner.html" lang="hu">Beosztástervező</a>
-			<a class="menu2" href="./plantmonitor.html" lang="hu">Növénymonitor</a>
-			<a class="menu2" href="./carkit.html" lang="hu">Car Kit</a>
-			<a class="menu2" href="./gta2d.html" lang="hu">GTA 2D</a>
-			<a class="menu2" href="./gta3d.html" lang="hu">GTA 3D</a>
-			<a class="menu2" href="./projecteuler.html" lang="hu">Project Euler</a>
-			<a class="menu2" href="./thispage.html" lang="hu">Ez az oldal</a>
-		</div>
+		<div id="menu1"></div>
+		<script>
+			fetch("menu1.html")
+			.then(result => result.text())
+			.then(text => {
+				var element = document.getElementById("menu1");
+				element.insertAdjacentHTML("afterbegin", text);
+				console.log("menu1 fetched");
+			})
+		</script>
+		
+		<div id="menu2"></div>
+		<script>
+			fetch("menu2.html")
+			.then(result => result.text())
+			.then(text => {
+				var element = document.getElementById("menu2");
+				element.insertAdjacentHTML("afterbegin", text);
+				console.log("menu2 fetched");
+			})
+		</script>
 		
 		<div id="content_en" lang="en">
 			<!-- english -->
