--- a/projects2.html
+++ b/projects2.html
@@ -9,6 +9,11 @@
 <title>Projects</title>
 <link rel="stylesheet" href="./style.css"> <!-- external css -->
 <script language="JavaScript" type="text/javascript" src="./scripts.js"></script> <!--external javascript -->
+<script>
+window.addEventListener("load", (event) => {
+	console.log("page is fully loaded");
+});
+</script>
 </head>
 
 <body onload='onLoad();'>
