--- a/projects2.html
+++ b/projects2.html
@@ -10,13 +10,12 @@
 <link rel="stylesheet" href="./style.css"> <!-- external css -->
 <script language="JavaScript" type="text/javascript" src="./scripts.js"></script> <!--external javascript -->
 <script>
-window.addEventListener("load", (event) => {
-	console.log("page is fully loaded");
-});
+sessionStorage.setItem("menu1", 0);
+sessionStorage.setItem("menu2", 0);
 </script>
 </head>
 
-<body onload='onLoad();'>
+<body onload='onLoad2();'>
 	<div id="contentWrap">
 		<div id="header">
 			<div id="logo">
@@ -37,6 +36,7 @@ window.addEventListener("load", (event) => {
 			.then(text => {
 				var element = document.getElementById("menu1");
 				element.insertAdjacentHTML("afterbegin", text);
+				sessionStorage.setItem("menu1", 1);
 				console.log("menu1 fetched");
 			})
 		</script>
@@ -48,6 +48,7 @@ window.addEventListener("load", (event) => {
 			.then(text => {
 				var element = document.getElementById("menu2");
 				element.insertAdjacentHTML("afterbegin", text);
+				sessionStorage.setItem("menu2", 1);
 				console.log("menu2 fetched");
 			})
 		</script>
