--- a/projects2.html
+++ b/projects2.html
@@ -15,7 +15,7 @@ sessionStorage.setItem("menu2", 0);
 </script>
 </head>
 
-<body onload='onLoad2();'>
+<body onload='onLoad();'>
 	<div id="contentWrap">
 		<div id="header">
 			<div id="logo">
