--- a/projects2.html
+++ b/projects2.html
@@ -11,7 +11,7 @@
 <script language="JavaScript" type="text/javascript" src="./scripts.js"></script> <!--external javascript -->
 </head>
 
-<body onload='onLoad2();'>
+<body onload='onLoad();'>
 	<div id="contentWrap">
 		<div id="header">
 			<div id="logo">
