--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
 	<div id="content">
 		<!-- english -->
 		<h1 lang="en">About</h1>
-		<p lang="en">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at lacinia odio, at dignissim purus. Suspendisse tristique dui sodales laoreet ultricies. Morbi luctus eleifend arcu. Nam semper justo non leo porttitor, quis pellentesque lacus condimentum. Ut quis elit eget diam viverra ultricies nec at ex. Fusce non eros tristique, scelerisque enim at, vehicula lorem. Suspendisse eu nunc tincidunt, ultrices orci in, luctus diam. Nulla pellentesque, sapien a sagittis egestas, mi enim vehicula dolor, a egestas arcu elit sed libero. Curabitur hendrerit bibendum eleifend. Suspendisse in dictum orci, id sollicitudin orci. Nam vulputate sem eu mi porta, vel pretium enim luctus.</p>
+		<p lang="en">The site is under development. Much of the content is missing.</p>
 		<!-- magyar -->
 		<h1 lang="hu">Rólunk</h1>
-		<p lang="hu">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at lacinia odio, at dignissim purus. Suspendisse tristique dui sodales laoreet ultricies. Morbi luctus eleifend arcu. Nam semper justo non leo porttitor, quis pellentesque lacus condimentum. Ut quis elit eget diam viverra ultricies nec at ex. Fusce non eros tristique, scelerisque enim at, vehicula lorem. Suspendisse eu nunc tincidunt, ultrices orci in, luctus diam. Nulla pellentesque, sapien a sagittis egestas, mi enim vehicula dolor, a egestas arcu elit sed libero. Curabitur hendrerit bibendum eleifend. Suspendisse in dictum orci, id sollicitudin orci. Nam vulputate sem eu mi porta, vel pretium enim luctus.</p>
+		<p lang="hu">Az oldal fejlesztés alatt áll. A tartalom nagy része még hiányzik.</p>
 	</div>
 	</div>  <!-- end of contentWrap -->
 	
