--- a/scheduleplanner.html
+++ b/scheduleplanner.html
@@ -84,7 +84,7 @@
 				<li>better schedule making algorithms: based on the performance of worker, etc.</li>
 			</ul>
 			<h2>Download</h2>
-			<p><a href="./scheduleplanner.zip">Schedule Planner</a></p>
+			<p><a href="https://github.com/sanyicz/SH-Schedule-manager">Schedule Planner</a></p>
 		</div>
 		<div id="content_hu" lang="hu">
 			<!-- english -->
@@ -114,7 +114,7 @@
 				<li>jobb beosztáskészítő algoritmusok (például a dolgozó teljesítménye alapján)</li>
 			</ul>
 			<h2>Letöltés</h2>
-			<p><a href="./scheduleplanner.zip">Beosztástervező</a></p>
+			<p><a href="https://github.com/sanyicz/SH-Schedule-manager">Beosztástervező</a></p>
 		</div>
 	</div>  <!-- end of contentWrap -->
 	
